# cps-fh-kart

./: README.md  README.org  flake.nix  pyproject.toml
fhkart/: breaks.py  database.py  game.py  gps.py  gui.py  helper.py  main.py  payload.py  player.py  server.py
src/: database.py  gps.py  gui.py  helper.py  main.py  payload.py  player.py  server.py  web.py
tracks/: FHtrack12_125809.gpx  FHtrackSokrates_125810.gpx  praesi_track.gpx
