[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "cps-fh-kart"
version = "2020.0.0"
dependencies = [
  "httpx",
  "pyqt5",
  "msgpack",
  "msgspec",
  "pyxdg",
  "pyqtwebengine",
  "folium",
]
requires-python = ">=3.12"
authors = [
  {name = "Maximilian Ruhm", email = "maximilian@ruhm.info"},
  {name = "Arne Iskra", email = "arne.iskra@gmx.com"},
]
description = "CPS Project to race with Bikes"
readme = "README.md"
